
cmake_minimum_required(VERSION 3.7.1)

project(StdFuncs)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_options("/D_CRT_SECURE_NO_WARNINGS")
endif()

set(SourceFiles "Args.cpp")
set(SourceFiles ${SourceFiles} "BaUtils.cpp")
set(SourceFiles ${SourceFiles} "Dir.cpp")
set(SourceFiles ${SourceFiles} "File.cpp")
set(SourceFiles ${SourceFiles} "Lex.cpp")
set(SourceFiles ${SourceFiles} "MungWall.cpp")
set(SourceFiles ${SourceFiles} "StdApplication.cpp")
set(SourceFiles ${SourceFiles} "StdClipboard.cpp")
set(SourceFiles ${SourceFiles} "StdConfigFile.cpp")
set(SourceFiles ${SourceFiles} "StdCRC.cpp")
set(SourceFiles ${SourceFiles} "StdDialog.cpp")
set(SourceFiles ${SourceFiles} "StdFileRequester.cpp")
set(SourceFiles ${SourceFiles} "StdFont.cpp")
set(SourceFiles ${SourceFiles} "StdGadgetLayout.cpp")
set(SourceFiles ${SourceFiles} "StdGadgets.cpp")
set(SourceFiles ${SourceFiles} "StdGadgetSlider.cpp")
set(SourceFiles ${SourceFiles} "StdGadgetStatusBar.cpp")
set(SourceFiles ${SourceFiles} "StdImage.cpp")
set(SourceFiles ${SourceFiles} "StdPool.cpp")
set(SourceFiles ${SourceFiles} "StdRendezvous.cpp")
set(SourceFiles ${SourceFiles} "StdStringList.cpp")
set(SourceFiles ${SourceFiles} "StdTextFile.cpp")
set(SourceFiles ${SourceFiles} "StdTime.cpp")
set(SourceFiles ${SourceFiles} "StdWildcard.cpp")
set(SourceFiles ${SourceFiles} "StdWindow.cpp")
set(SourceFiles ${SourceFiles} "Test.cpp")
set(SourceFiles ${SourceFiles} "Utils.cpp")

add_library(StdFuncs ${SourceFiles})
